--- a/Back/src/views/partials/header.ejs
+++ b/Back/src/views/partials/header.ejs
@@ -19,7 +19,7 @@
               <a class="nav-link" href="/recipes">Recetas</a>
               <a class="nav-link" href="/flavors">Aromas</a>
               <a class="nav-link" href="/sales">Ventas</a>
-              <a class="nav-link" href="/stock">Stock</a>
+              <a class="nav-link" href="/compras">Compras</a>
               <a class="nav-link" href="/costs" tabindex="-1" aria-disabled="true">Costos</a>
               <a class="nav-link" href="/precios" tabindex="-1" aria-disabled="true">Precios Venta</a>
             </div>
