--- a/Back/src/views/Sales/salesForCustomer.ejs
+++ b/Back/src/views/Sales/salesForCustomer.ejs
@@ -1,59 +1,91 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <%- include('../partials/headBootStrap.ejs') %>
-        <link rel='stylesheet' href='/stylesheets/recipes.css' />
-        <title>Nuve - Recetas</title>
+    <%- include('../partials/headBootStrap.ejs') %> 
+    <link rel='stylesheet' href='/stylesheets/recipes.css' />
+    <title>Nuve -Ventas por Cliente</title>
+    
 </head>
-
 <body>
-    <%- include('../partials/header.ejs') %>    
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <form action="/Sales/search" method="get">
-                        <input type="text" name="searchCustomer" placeholder="Buscar Cliente">
-                        <input type="submit" value="Buscar">
-                    </form>
-                </a>
-            </li>     
-        </ul>
-        <h3>Ventas por Cliente</h3>
-      
-        
-            <ul>
-                <% for( let i=0; i < ventas.length; i++ ) { %>
-                    <a href="./salesForCustomerDetail/<%= ventas[i].dataValues.cliente %>">
-                    <li class="btn btn-outline-warning btn-sm">
-                        <div class="card text-white bg-dark" >
-                            <div class="card-body recipes">
-                                <h5 class="card-title">
-                                
-                                    <%= ventas[i].dataValues.cliente %>
-                                </h5>
-                                <h6 class="card-subtitle mb-2 text-muted">
-                                    TOTAL FACTURADO: 
-                                    <br>
-                                    <%= ventas[i].dataValues.TotalFacturado %>
-                                </h6>
-                                <h6 class="card-subtitle">
-                                    TOTAL GANANCIA
-                                    <br>
-                                    <%= ventas[i].dataValues.TotalGanancia %>
-                                <h6/>
-                                
-                            </div>
-                        </div>
-                    </li>
-                </a>
-                    <% } %>
-            </ul>
-        
-        <%- include('../partials/bootstrapScript.ejs') %>
-</body>
+    <%- include('../partials/header.ejs') %> 
+    <%- include('../partials/bootstrapScript.ejs')  %> 
+    <section class="mainSectionSales">
+  
+      <div class="one">
+        <ul class="nav flex-column">
 
+            <li class="nav-item"><h4>
+            
+              <a class="nav-link" href="/Sales/salesForCustomer">Cliente</a>
+            </h4>
+            </li>
+            <li class="nav-item">
+              <h4><a class="nav-link" href="/Sales/salesForMonth">Mes</a></h4>
+            </li>
+            <li class="nav-item">
+                <h4><a class="nav-link" href="/Sales/salesForYear">Año</a></h4>
+            </li>
+            <li class="nav-item">
+                <h4><a class="nav-link" href="/Sales/salesForRecipe">Receta</a></h4>
+            </li>
+            <li class="nav-item">
+                <h4><a class="nav-link" href="/Sales/salesForFlavor">Aroma</a></h4>
+            </li>
+           
+          </ul>
+      </div>
+      
+       
+        
+    
+        <section class="Envases view2 two col-4">
+            <h5>VENTAS POR CLIENTE</h5>
+            <table class="table table-dark ">
+                <thead>
+                    <tr class="table-primary flush">
+                        <th scope="col" class="bg-primary">Nombre Cliente</th>
+                        <th scope="col" class="bg-primary">Total en $</th>
+                        <th scope="col" class="bg-primary">Costo</th>
+                        <th scope="col" class="bg-primary">Ganancia</th>
+                        <th scope="col" class="bg-primary">Margen de Ganancia</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% for( let i=0; i < ventas.length; i++ ) { %>
+                        <tr>
+
+                            <th scope="row">
+                                <%= ventas[i].dataValues.cliente %>
+                            </th>
+                            <td>
+                                <%= Math.trunc(ventas[i].dataValues.TotalFacturado) %>
+                            </td>
+                            <td>
+                                <%= Math.trunc(ventas[i].dataValues.TotalFacturado-ventas[i].dataValues.TotalGanancia) %>
+                            </td>
+                            <td>
+                                <%= Math.trunc(ventas[i].dataValues.TotalGanancia) %>
+                            </td>
+                            <td>
+                                <%= Math.trunc((ventas[i].dataValues.TotalGanancia/ventas[i].dataValues.TotalFacturado) * 100) %> %
+                            </td>
+
+
+                        </tr>
+                        <% } %>
+
+
+
+                </tbody>
+            </table>
+        </section>
+    <%- include('../partials/bootstrapScript.ejs')  %> 
+    <!-- <script src="sweetalert2.all.min.js"></script> -->
+    </section>
+    
+      
+</body>
 </html>
