--- a/Back/src/views/precios.ejs
+++ b/Back/src/views/precios.ejs
@@ -2,27 +2,24 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags y enlaces a estilos y scripts -->
     <%- include('./partials/headBootStrap.ejs') %>
-        <link rel='stylesheet' href='/stylesheets/recipes.css' />
-
-        <title>Nuve - Precios</title>
+    <link rel='stylesheet' href='/stylesheets/recipes.css' />
+    <title>Nuve - Precios</title>
 </head>
 
 <body>
     <%- include('./partials/header.ejs') %>
-
-        <!-- NAVBAR  -->
-
-        <!-- termina navbar -->
-
-        <h3>Precios</h3>
-
-        <section class="Envases view1 col-4">
-            
-            <table class="table table-dark ">
+    
+    <!-- Sección de precios -->
+    <section class="Envases view1 col-8">
+        <% const ranges = ['0-3', '3-9']; %>
+        
+        <% for (let r = 0; r < ranges.length; r++) { %>
+            <tr>
+                <th colspan="6"><h4><%= ranges[r] %>MG/ML</h4></th>
+            </tr>
+            <table class="table table-dark">
                 <thead>
                     <tr class="table-primary flush">
                         <th scope="col" class="bg-primary">Tipo Receta</th>
@@ -34,47 +31,27 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <h4>Tradicionales y NUVE!</h4>
-                    <br>
-                    <% for( let i=0; i < precio.length; i++ ) { %>
-                        
-                       
+                   
+                    <% for (let i = 0; i < precio.length; i++) { %>
+                        <% if (precio[i].RangoNico === ranges[r]) { %>
                             <tr>
-                                <th scope="row">
-                                    <%= precio[i].TipoReceta %>
-                                </th>
-                                <td>
-                                    <%= precio[i].RangoNico %>
-                                </td>
-                                <td>
-                                    <%= precio[i].ML %>
-                                </td>
-                                <td>
-                                    <%= precio[i].Precio %>
-                                </td>
-                                <td>
-                                    <%= precio[i].PrecioPack %>
-                                </td>
-                                <td>
-                                    <%= precio[i].PrecioUnitarioPack %>
-                                </td>
+                                <th scope="row"><%= precio[i].TipoReceta %></th>
+                                <td><%= precio[i].RangoNico %></td>
+                                <td><%= precio[i].ML %></td>
+                                <td><%= precio[i].Precio %></td>
+                                <td><%= precio[i].PrecioPack %></td>
+                                <td><%= precio[i].PrecioUnitarioPack %></td>
                             </tr>
-                       
-                        
                         <% } %>
-                       
+                    <% } %>
                 </tbody>
-                
             </table>
-         
-            
-                
-            </table>
-
-        </section>
-        <%- include('./partials/bootstrapScript.ejs') %>
-            <script src="sweetalert2.all.min.js"></script>
-
+        <% } %>
+    </section>
+    
+    <!-- Inclusión de scripts y estilos adicionales -->
+    <%- include('./partials/bootstrapScript.ejs') %>
+    <script src="sweetalert2.all.min.js"></script>
 </body>
 
 </html>
