apidolar consumer ok, like a service

--- a/Back/src/views/Flavors/flavorCreate.ejs
+++ b/Back/src/views/Flavors/flavorCreate.ejs
@@ -23,9 +23,9 @@
         <div class="form-group sm">
             <label for="flavorCostType" >Tipo de Costo</label>
             <select class="form-control-sm" id="flavorCostType1" name="costType">
-                <option value="$ Arg">$ARS</option>
-                <option value="U$S">U$S Oficial</option>
-                <option value="U$SB">U$S Blue</option>
+                <option value="ARG">$ARS</option>
+                <option value="USO">U$S Oficial</option>
+                <option value="USP">U$S Blue</option>
             </select>
         </div>
         <label for="">Cantidad</label>
