recipes, flavors, stock with apidolar

--- a/Back/src/views/Flavors/flavorCreate.ejs
+++ b/Back/src/views/Flavors/flavorCreate.ejs
@@ -19,7 +19,7 @@
         <input type="text" name="brand">
         <br>
         <label for="">Costo</label>
-        <input type="number" name="price">
+        <input type="number" name="price"step="0.1"min="0" pattern="^[0-9]+">
         <div class="form-group sm">
             <label for="flavorCostType" >Tipo de Costo</label>
             <select class="form-control-sm" id="flavorCostType1" name="costType">
