--- a/Back/src/views/Flavors/flavorDetail.ejs
+++ b/Back/src/views/Flavors/flavorDetail.ejs
@@ -57,7 +57,7 @@
 							</li>
 							<li>
 								<i class="fas fa-store"></i>
-								<p>Es usado en los siguientes recetas:</p>
+								<p>Marca: <%= aroma.Marca %></p>
 								
 									
 								
