--- a/Back/src/views/Flavors/flavorResults.ejs
+++ b/Back/src/views/Flavors/flavorResults.ejs
@@ -24,7 +24,7 @@
                          <%= flavorFound[i].NombreAroma %>
                      </h5>
                      <h6 class="card-subtitle mb-2 text-muted">
-                         <%= flavorFound[i].Proveedor %>
+                         <%= flavorFound[i].Marca %>
                      </h6>
                      
                      <p class="card-text">
