--- a/Back/src/views/partials/costoVenta.ejs
+++ b/Back/src/views/partials/costoVenta.ejs
@@ -17,11 +17,11 @@
             </p>
             
         
-        <p>Costo total : <%=ultimaVenta[0].CostoTotal%> </p>
+        <p>Costo total : $<%=ultimaVenta[0].CostoTotal%> </p>
         
-        <p>Precio Venta: <%= ultimaVenta[0].PrecioVenta %></p>
+        <p>Precio Venta: $<%= ultimaVenta[0].PrecioVenta %></p>
         
-        <p>Ganacia:  <%= ultimaVenta[0].Ganancia %> </p>
+        <p>Ganancia: $<%= ultimaVenta[0].Ganancia %> </p>
      
        
     </section>
