--- a/Back/src/views/Sales/salesForMonth.ejs
+++ b/Back/src/views/Sales/salesForMonth.ejs
@@ -68,6 +68,8 @@
                                     class="nav-link" href="/Sales//salesForMonth/12">DICIEMBRE</a></button>
                         </section>
                         <br>
+                     
+                        
                         <table class="table table-dark ">
                             <thead>
                                 <tr class="table-primary flush">
@@ -84,7 +86,9 @@
 
                                         <th scope="row">
                                             <%= ventas[i].NombreCliente %>
+                                           
                                         </th>
+                                       
                                         <td>
                                             <%= ventas[i].FechaVenta %> HS
                                         </td>
@@ -100,12 +104,16 @@
 
 
                                     </tr>
+                                    
                                     <% } %>
+                                    
 
 
 
                             </tbody>
+                          
                         </table>
+                        <h3>Ventas Totales MES: <%= ventasTotalMes[0].TotalVentas %> -- Ganancia Total MES: <%= ventasTotalMes[0].TotalGanancias %></h3>
                     </section>
                 </div>
                 <%- include('../partials/bootstrapScript.ejs') %>
