update rank-times for updta dollar in quoteServices - add in DB last conversion USS to $

--- a/Back/src/views/Flavors/flavors.ejs
+++ b/Back/src/views/Flavors/flavors.ejs
@@ -52,7 +52,7 @@
                         </p>
                         <p class="card-text">
                            Costo:
-                            <%= aroma[i].CostoUnitario %> /ML
+                            <%= Math.trunc(aroma[i].CostoUnitario) %> /ML
                         </p>
                         <p class="card-text">
                             Actualizado:
