--- a/Back/src/views/index.ejs
+++ b/Back/src/views/index.ejs
@@ -32,7 +32,7 @@
    <div class="view4">
     <h5>Dolar BLUE: <%= valorDolarblue %></h5> 
    </div>
-  </p ><h5 class="text-start">Actualizado el <%= new Date().toLocaleString() %> hs</h5>
+  </p ><h5 class="text-start">Actualizado el <%= fechaActual.toLocaleString() %> hs</h5>
   
 </p>
   </main>
