--- a/Back/src/views/partials/header.ejs
+++ b/Back/src/views/partials/header.ejs
@@ -18,10 +18,12 @@
               <a class="nav-link" aria-current="page" href="/">Home</a>
               <a class="nav-link" href="/recipes">Recetas</a>
               <a class="nav-link" href="/flavors">Aromas</a>
+              <a class="nav-link" href="/customer" >Clientes</a>
               <a class="nav-link" href="/sales">Ventas</a>
               <a class="nav-link" href="/compras">Compras</a>
-              <a class="nav-link" href="/costs" tabindex="-1" aria-disabled="true">Costos</a>
-              <a class="nav-link" href="/precios" tabindex="-1" aria-disabled="true">Precios Venta</a>
+              <a class="nav-link" href="/costs">Costos</a>
+              <a class="nav-link" href="/precios" >Precios Venta</a>
+
             </div>
             <button class="btn btn-outline-warning btn-sm login"><a class="nav-link login" href="/users" tabindex="-1" aria-disabled="true">Login</a></button>
             
