--- a/Back/src/views/recipe/recipes.ejs
+++ b/Back/src/views/recipe/recipes.ejs
@@ -23,7 +23,7 @@
                 </a>
             </li>
             <li>
-                <a class="nav-link nav-fill active btn-outline-warning w-10" aria-current="page" href="recipes/create">Crear Receta</a>
+                <a class="nav-link nav-fill active btn-outline-primary ml-4" aria-current="page" href="recipes/create">Crear Receta</a>
             </li>
         </ul>
         <!-- termina navbar -->
