start with stockXReceta para averiguar cuatas recetas posibles por acumulado de stock por esencia

--- a/Back/src/views/partials/header.ejs
+++ b/Back/src/views/partials/header.ejs
@@ -23,6 +23,7 @@
               <a class="nav-link" href="/compras">Compras</a>
               <a class="nav-link" href="/costs">Costos</a>
               <a class="nav-link" href="/precios" >Precios Venta</a>
+              <a class="nav-link" href="/stockPorReceta" >Stock por Receta</a>
 
             </div>
             <button class="btn btn-outline-warning btn-sm login"><a class="nav-link login" href="/users" tabindex="-1" aria-disabled="true">Login</a></button>
